fixed ugly grid bug where it would shift position

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
-button {
-position: relative;
- width:200px;
- height:200px;
- border: 1px solid rgba(0, 0, 0, 0.8);
-font-size: 20px;
-font-style: bold;
+.board button {
+  width: 30%;
+  height: 200px;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  font-size: 20px;
+  padding: 0;
+  display: inline;
+}
+
+#reset {
+  margin-top: 15px;
+  height: 75px;
+  width: 100px;
 }
 
 .top0,
@@ -29,8 +35,10 @@ font-style: bold;
 .mid3,
 .bot6 {
   border-left: none;
-
 }
-.board{
-padding-left: 25%;
+
+.board {
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap row;
 }
